decode some english; weapon names

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,14 @@ node_modules
 
 # Desktop Services Store on macOS
 .DS_Store
+
+
+
+# path we extract game files from
+/GAMEPATH
+
+# extracted game files.
+# For some other projects (PoE), I would include these in the repository.
+# However, Wolcen is newer, and I'm not sure how picky its devs are about
+# copyright - so let's play it safe and leave them out of git for now.
+/datamine/
