--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "devDependencies": {
     "create-elm-app": "^4.2.1",
     "dotenv": "^8.2.0",
+    "json-loader": "^0.5.7",
     "raw-loader": "^4.0.0"
   }
 }
