--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "test": "bash -c \"elm-app test\""
   },
   "devDependencies": {
+    "@erosson/xlsx-loader": "^1.0.3",
     "create-elm-app": "^4.2.1",
     "dotenv": "^8.2.0",
     "json-loader": "^0.5.7",
