--- a/package.json
+++ b/package.json
@@ -18,8 +18,16 @@
   "devDependencies": {
     "@erosson/xlsx-loader": "^1.0.3",
     "create-elm-app": "^4.2.1",
+    "css-loader": "^3.4.2",
     "dotenv": "^8.2.0",
     "json-loader": "^0.5.7",
-    "raw-loader": "^4.0.0"
+    "node-sass": "^4.13.1",
+    "raw-loader": "^4.0.0",
+    "sass-loader": "^8.0.2",
+    "style-loader": "^1.1.3"
+  },
+  "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.12.1",
+    "bootstrap": "^4.4.1"
   }
 }
