autogenerate js imports, preparing for many skill imports

--- a/.gitignore
+++ b/.gitignore
@@ -21,4 +21,5 @@ node_modules
 /GAMEPATH
 
 # extracted game data. These are way too big, and I'm not sure how wolcen devs are about copyright yet anyway, so don't commit by default.
+# A small subset of these are committed, in `datamine` - only those required for ci and production builds
 /datamine.tmp
