--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "export:pull": "bash -c \"git subtree pull --squash --prefix third-party/WolcenExtractor git@github.com:gabriel-dehan/WolcenExtractor.git master && yarn export:install\"",
     "export:install": "bash -c \"gem install bundler && cd third-party/WolcenExtractor && bundle install\"",
-    "export:cp": "bash -c \"rm -rf datamine && mkdir -p datamine && cd datamine.tmp && cp -r --parents localization/text_ui_Loot.xml Game/Umbra/Loot/{Armors,Weapons} -t ../datamine/\"",
+    "export:cp": "bash -c \"rm -rf datamine && mkdir -p datamine && cd datamine.tmp && cp -r --parents localization/text_ui_Loot.xml Game/Umbra/Loot/Armors/{Armors,Accessories,Armors_unique,UniquesAccessories}* Game/Umbra/Loot/Weapons/{Unique,}{Weapons,Shields}* -t ../datamine/ && cd - && node ./src/import_datamine.js\"",
     "export": "bash -c \"cd third-party/WolcenExtractor && ruby src/main.rb extract --source \\\"`cat ../../GAMEPATH`\\\" --dest ../../datamine.tmp --only english_xml.pak,umbra.pak && yarn export:cp\"",
     "start": "bash -c \"ELM_DEBUGGER=false elm-app start\"",
     "build": "bash -c \"elm-app build\"",
@@ -20,6 +20,7 @@
     "create-elm-app": "^4.2.1",
     "css-loader": "^3.4.2",
     "dotenv": "^8.2.0",
+    "glob": "^7.1.6",
     "json-loader": "^0.5.7",
     "node-sass": "^4.13.1",
     "raw-loader": "^4.0.0",
