remove search-index from git, rebuild when appropriate

--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,6 @@ node_modules
 
 # Test fixtures; datamine imports as an elm string, created by fixture.js
 tests/Fixture/Json.elm
+
+# search index. Can be derived from other stuff in /datamine using `yarn build-search-index`, no need to commit
+/datamine/search-index.json
