oops, fix gitignore for search-index; readme

--- a/.gitignore
+++ b/.gitignore
@@ -28,4 +28,4 @@ node_modules
 tests/Fixture/Json.elm
 
 # search index. Can be derived from other stuff in /datamine using `yarn build-search-index`, no need to commit
-/datamine/search-index.json
+/datamine/searchIndex.json
