statichtml proof of concept

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "export:cp": "bash -c \"rm -rf datamine && mkdir datamine && node ./src/import_datamine.js && yarn build-search-index\"",
     "build-search-index": "bash -c \"elm make src/BuildSearchIndexCLI.elm --output datamine.tmp/BuildSearchIndexCLI.elm.js && node --experimental-modules src/build-search-index-cli.mjs\"",
     "export": "bash -c \"cd third-party/WolcenExtractor && ruby src/main.rb extract --source \\\"`cat ../../GAMEPATH`\\\" --dest ../../datamine.tmp --only english_xml.pak,umbra.pak,Libs_UI_ && cd - && cp \\\"`cat GAMEPATH`\\\"/revision.txt datamine.tmp/revision.txt && yarn export:cp\"",
+    "static-html-gen": "bash -c \"elm make src/StaticHtmlGen.elm --optimize --output StaticHtmlGen.elm.js && node ./src/static-html-gen.js\"",
     "start": "bash -c \"ELM_DEBUGGER=false elm-app start\"",
     "build": "bash -c \"yarn build-search-index && elm-app build\"",
     "build:ci": "bash -c \"yarn test && yarn build\"",
@@ -23,6 +24,7 @@
     "css-loader": "^3.4.2",
     "dotenv": "^8.2.0",
     "glob": "^7.1.6",
+    "jsdom": "^16.2.0",
     "json-loader": "^0.5.7",
     "mkdirp": "^1.0.3",
     "node-sass": "^4.13.1",
