more robust ssr, not works; not yet used in prod

--- a/package.json
+++ b/package.json
@@ -8,14 +8,16 @@
   "scripts": {
     "export:pull": "bash -c \"git subtree pull --squash --prefix third-party/WolcenExtractor git@github.com:gabriel-dehan/WolcenExtractor.git master && yarn export:install\"",
     "export:install": "bash -c \"gem install bundler && cd third-party/WolcenExtractor && bundle install\"",
-    "export:cp": "bash -c \"rm -rf datamine && mkdir datamine && node ./src/import_datamine.js && yarn build-search-index\"",
-    "build-search-index": "bash -c \"elm make src/BuildSearchIndexCLI.elm --output datamine.tmp/BuildSearchIndexCLI.elm.js && node --experimental-modules src/build-search-index-cli.mjs\"",
-    "export": "bash -c \"cd third-party/WolcenExtractor && ruby src/main.rb extract --source \\\"`cat ../../GAMEPATH`\\\" --dest ../../datamine.tmp --only english_xml.pak,umbra.pak,Libs_UI_ && cd - && cp \\\"`cat GAMEPATH`\\\"/revision.txt datamine.tmp/revision.txt && yarn export:cp\"",
-    "static-html-gen": "bash -c \"elm make src/StaticHtmlGen.elm --optimize --output StaticHtmlGen.elm.js && node ./src/static-html-gen.js\"",
+    "export:cp": "bash -c \"rm -rf datamine && mkdir datamine && node ./src/import_datamine.js && yarn _build:search-index\"",
+    "export": "bash -c \"echo 'deleting datamine.tmp in 3...' && sleep 3 && rm -rf datamine.tmp && cd third-party/WolcenExtractor && ruby src/main.rb extract --source \\\"`cat ../../GAMEPATH`\\\" --dest ../../datamine.tmp --only english_xml.pak,umbra.pak,Libs_UI_ && cd - && cp \\\"`cat GAMEPATH`\\\"/revision.txt datamine.tmp/revision.txt && yarn export:cp\"",
     "start": "bash -c \"ELM_DEBUGGER=false elm-app start\"",
-    "build": "bash -c \"yarn build-search-index && elm-app build\"",
+    "build": "bash -c \"yarn _build:search-index && yarn _build && yarn _build:ssr\"",
+    "_build": "bash -c \"rm -rf build && elm-app build\"",
+    "_build:search-index": "bash -c \"elm make src/BuildSearchIndexCLI.elm --output datamine.tmp/BuildSearchIndexCLI.elm.js && node --experimental-modules src/build-search-index-cli.mjs\"",
+    "_build:ssr": "bash -c \"rm -rf build-ssr && elm make src/SSR_CLI.elm --optimize --output datamine.tmp/SSR_CLI.elm.js && node ./src/ssr-cli.js\"",
     "build:ci": "bash -c \"yarn test && yarn build\"",
     "build:serve": "bash -c \"serve build\"",
+    "build:ssr:serve": "bash -c \"serve build-ssr\"",
     "test": "node --experimental-modules tests/fixture.mjs && elm-app test"
   },
   "devDependencies": {
@@ -27,6 +29,7 @@
     "jsdom": "^16.2.0",
     "json-loader": "^0.5.7",
     "mkdirp": "^1.0.3",
+    "ncp": "^2.0.0",
     "node-sass": "^4.13.1",
     "raw-loader": "^4.0.0",
     "sass-loader": "^8.0.2",
