--- a/package.json
+++ b/package.json
@@ -14,10 +14,9 @@
     "build": "bash -c \"yarn _build:search-index && yarn _build && yarn _build:ssr\"",
     "_build": "bash -c \"rm -rf build && elm-app build\"",
     "_build:search-index": "bash -c \"elm make src/BuildSearchIndexCLI.elm --output datamine.tmp/BuildSearchIndexCLI.elm.js && node --experimental-modules src/build-search-index-cli.mjs\"",
-    "_build:ssr": "bash -c \"rm -rf build-ssr && elm make src/SSR_CLI.elm --optimize --output datamine.tmp/SSR_CLI.elm.js && node ./src/ssr-cli.js\"",
+    "_build:ssr": "bash -c \"rm -rf build-ssr && elm make src/SSR_CLI.elm --optimize --output datamine.tmp/SSR_CLI.elm.js && node ./src/ssr-cli.js && mv build-ssr build/ssr\"",
     "build:ci": "bash -c \"yarn test && yarn build\"",
     "build:serve": "bash -c \"serve build\"",
-    "build:ssr:serve": "bash -c \"serve build-ssr\"",
     "test": "node --experimental-modules tests/fixture.mjs && elm-app test"
   },
   "devDependencies": {
