--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "xml2js": "^0.4.23"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.12.1",
     "bootstrap": "^4.4.1",
     "jquery": "^3.4.1",
     "popper.js": "^1.16.1"
