--- a/datamine/Game/Umbra/CityBuilding/Projects/dark_market_projects.json
+++ b/datamine/Game/Umbra/CityBuilding/Projects/dark_market_projects.json
@@ -263,7 +263,7 @@
               "Projects": "dark_market_item_quality_upgrade",
               "RequiresItem": "1",
               "AuthorizedItemKeywords": "accessory,armor,weapon,shield",
-              "MaxRarity": "legendary",
+              "MaxRarity": "rare",
               "MaxQuality": "exceptional"
             },
             "ResourceCost": [
@@ -467,7 +467,7 @@
               "Projects": "dark_market_leg_reagent_upgrade",
               "RequiresItem": "1",
               "AuthorizedItemKeywords": "reagent",
-              "MaxRarity": "",
+              "MaxRarity": "rare",
               "MaxQuality": ""
             },
             "ResourceCost": [
