V:/__local__ now tests with local datamine. expose local datamine in /public/datamine only during dev

--- a/.gitignore
+++ b/.gitignore
@@ -31,13 +31,7 @@ node_modules
 # Test fixtures; datamine imports as an elm string, created by fixture.js
 tests/Fixture/Json.elm
 
-# search index. Can be derived from other stuff in /datamine using `yarn build-search-index`, no need to commit
-/public/searchIndex.json
-
-# Wolcen data. Fetch separately from webpack/js because it's really big.
-/public/datamine.json
-
-# Sizes of those big files above, for a loading indicator
-/datamine/sizes.json
+# Wolcen data for testing locally
+/public/datamine/
 
 /scripts/**/*.elm.js
