--- a/.github/workflows/assets-export.yml
+++ b/.github/workflows/assets-export.yml
@@ -19,7 +19,7 @@ jobs:
           python-version: 3.x
       - run: pip install steamctl pexpect
 
-      - working-directory: ./packages/datamine-dl
+      - working-directory: ./assets-dl
         env:
           STEAMCTL_USER: ${{ secrets.STEAMCTL_USER }}
           STEAMCTL_PASSWD: ${{ secrets.STEAMCTL_PASSWD }}
