--- a/assets-dl/package.json
+++ b/assets-dl/package.json
@@ -5,7 +5,7 @@
   "private": true,
   "scripts": {
     "info.txt": "bash -c \"TZ=UTC steamctl depot info --app 424370 --depot 424371 --branch public | tail --lines=+2 | tee steam-depot-info-new.txt\"",
-    "info.txt:mv": "bash -c \"mv --force --no-target-directory steam-depot-info.txt steam-depot-info-old.txt && mv --force --no-target-directory steam-depot-info-new.txt steam-depot-info.txt\"",
+    "info.txt:mv": "bash -c \"(mv --force --no-target-directory steam-depot-info.txt steam-depot-info-old.txt || true) ; mv --force --no-target-directory steam-depot-info-new.txt steam-depot-info.txt\"",
     "fetch": "bash -c \"yarn fetch:query || (yarn fetch:force && yarn info.txt:mv)\"",
     "fetch:query": "bash -c \"yarn info.txt && diff steam-depot-info.txt steam-depot-info-new.txt && echo \\\"assets-dl is up to date.\\\"\"",
     "fetch:force": "bash -c \"mkdir -p ${FETCH_DIR:-dist} && cd ${FETCH_DIR:-dist} && steamctl depot download --app 424370 --depot 424371 --branch public --regex '(revision.txt|localization|win_x64\\\\\\\\CryGameSDK|Game\\\\\\\\(Libs_UI_|Umbra))' \""
