--- a/.github/workflows/assets-export.yml
+++ b/.github/workflows/assets-export.yml
@@ -50,7 +50,14 @@ jobs:
         with:
           node-version: 12.x
       - if: ${{ env.STEAM_DEPOT_INFO_DIFF != '' }}
+        # https://docs.github.com/en/free-pro-team@latest/actions/guides/building-and-testing-ruby
+        uses: ruby/setup-ruby@v1
+        with:
+          ruby-version: 2.6
+      - if: ${{ env.STEAM_DEPOT_INFO_DIFF != '' }}
         run: yarn install --frozen-lockfile
+      - if: ${{ env.STEAM_DEPOT_INFO_DIFF != '' }}
+        run: yarn export:install
       - if: ${{ env.STEAM_DEPOT_INFO_DIFF != '' }}
         run: yarn export
 
