--- a/.github/workflows/assets-export.yml
+++ b/.github/workflows/assets-export.yml
@@ -5,7 +5,15 @@ on:
   workflow_dispatch:
 
 jobs:
-  fetch-and-export:
+  # linux must run `fetch`, as headless steam authentication requires pexpect which has poor windows support.
+  # windows must run `export`, as WolcenExtractor's keydumper + PakDecrypt are windows-only `exe`s.
+  #
+  # I don't like the complexity of two OSes here... but it works
+  #
+  # Based on similar code I wrote for path of exile and clicker heroes 2:
+  # https://github.com/mapwatch/mapwatch/blob/master/.github/workflows/ggpk-export.yml
+  # https://github.com/erosson/ch2plan/blob/master/.github/workflows/assets-export.yml
+  fetch:
     runs-on: ubuntu-latest
     steps:
       - run: |
@@ -42,31 +50,57 @@ jobs:
           (diff steam-depot-info-old.txt steam-depot-info.txt || true) >> $GITHUB_ENV
           echo '__EOF__' >> $GITHUB_ENV
           cat $GITHUB_ENV
-
       # Stop running if there's no info.txt differences
       - if: ${{ env.STEAM_DEPOT_INFO_DIFF != '' }}
-        # https://docs.github.com/en/free-pro-team@latest/actions/guides/building-and-testing-nodejs
-        uses: actions/setup-node@v1
+        uses: actions/upload-artifact@v2
+        with:
+          name: assets-dl
+          path: assets-dl/dist/**/*
+          retention-days: 1
+      - if: ${{ env.STEAM_DEPOT_INFO_DIFF != '' }}
+        uses: actions/upload-artifact@v2
+        with:
+          name: assets-info
+          path: assets-dl/steam-depot-info.txt
+          retention-days: 1
+    outputs:
+      STEAM_DEPOT_INFO_NEW: ${{ env.STEAM_DEPOT_INFO_NEW }}
+      STEAM_DEPOT_INFO_DIFF: ${{ env.STEAM_DEPOT_INFO_DIFF }}
+  export:
+    needs: fetch
+    if: ${{ needs.fetch.outputs.STEAM_DEPOT_INFO_DIFF != '' }}
+    runs-on: windows-latest
+    steps:
+      - run: whoami
+      - uses: actions/checkout@v2
+      - uses: actions/download-artifact@v2
+        with:
+          name: assets-dl
+          path: assets-dl/dist
+      - uses: actions/download-artifact@v2
+        with:
+          name: assets-info
+          path: steam-depot-info.txt
+      - run: ls steam-depot-info.txt
+      - run: ls assets-dl/dist/
+      - run: rm assets-dl/steam-depot-info.txt
+      - run: mv steam-depot-info.txt assets-dl/steam-depot-info.txt
+      # https://docs.github.com/en/free-pro-team@latest/actions/guides/building-and-testing-nodejs
+      - uses: actions/setup-node@v1
         with:
           node-version: 12.x
-      - if: ${{ env.STEAM_DEPOT_INFO_DIFF != '' }}
-        # https://docs.github.com/en/free-pro-team@latest/actions/guides/building-and-testing-ruby
-        uses: ruby/setup-ruby@v1
+      # https://docs.github.com/en/free-pro-team@latest/actions/guides/building-and-testing-ruby
+      - uses: ruby/setup-ruby@v1
         with:
           ruby-version: 2.6
-      - if: ${{ env.STEAM_DEPOT_INFO_DIFF != '' }}
-        run: yarn install --frozen-lockfile
-      - if: ${{ env.STEAM_DEPOT_INFO_DIFF != '' }}
-        run: yarn export:install
-      - if: ${{ env.STEAM_DEPOT_INFO_DIFF != '' }}
-        run: yarn export
+      - run: yarn install --frozen-lockfile
+      - run: yarn export:install
+      - run: yarn export
 
       # TODO img deployment; none of the above things actually change the website.
       # Maybe this part should auto-run when `/datamine/**` changes, so it runs only after a PR is merged?
-      #- if: ${{ env.STEAM_DEPOT_INFO_DIFF != '' }}
-      #  run: yarn build:img
-      #- if: ${{ env.STEAM_DEPOT_INFO_DIFF != '' }}
-      #  run: yarn deploy:img
+      #- run: yarn build:img
+      #- run: yarn deploy:img
 
       # https://peterevans.dev/posts/github-actions-how-to-create-pull-requests-automatically/
       - name: Create pull request
@@ -75,7 +109,7 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
           branch: workflows-assets-export
           commit-message: '[assets-export] Wolcen content updates'
-          title: '[ggpk-export] Wolcen content updates'
+          title: '[assets-export] Wolcen content updates'
           body: >
             Looks like Wolcen was patched recently! I've updated WolcenDB for you.
 
