--- a/.github/workflows/assets-export.yml
+++ b/.github/workflows/assets-export.yml
@@ -37,6 +37,9 @@ jobs:
       # fetch if and only if there are info.txt differences
       - working-directory: ./assets-dl
         run: yarn fetch
+      - run: ls assets-dl/dist/
+      - run: ls assets-dl/dist/*
+      - run: exit 1
 
       - working-directory: ./assets-dl
         run: |
@@ -83,6 +86,7 @@ jobs:
           path: steam-depot-info.txt
       - run: ls steam-depot-info.txt
       - run: ls assets-dl/dist/
+      - run: ls assets-dl/dist/*
       - run: rm assets-dl/steam-depot-info.txt
       - run: mv steam-depot-info.txt assets-dl/steam-depot-info.txt
       # https://docs.github.com/en/free-pro-team@latest/actions/guides/building-and-testing-nodejs
