--- a/.github/workflows/assets-export.yml
+++ b/.github/workflows/assets-export.yml
@@ -7,7 +7,10 @@ on:
 jobs:
   # windows must run this, as WolcenExtractor's keydumper + PakDecrypt are windows-only `exe`s.
   fetch:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
+    defaults:
+      run:
+        shell: bash
     steps:
       - run: |
           echo "::add-mask::${{ secrets.STEAMCTL_USER }}"
