--- a/.github/workflows/assets-export.yml
+++ b/.github/workflows/assets-export.yml
@@ -55,13 +55,13 @@ jobs:
       # Stop running if there's no info.txt differences
       # https://docs.github.com/en/free-pro-team@latest/actions/guides/building-and-testing-ruby
       - if: ${{ env.STEAM_DEPOT_INFO_DIFF != '' }}
-        uses: ruby/setup-ruby@v1
-        with:
-          ruby-version: 2.6
+        #uses: ruby/setup-ruby@v1
+        #with:
+        #  ruby-version: 2.6
       - if: ${{ env.STEAM_DEPOT_INFO_DIFF != '' }}
         run: yarn install --frozen-lockfile
-      - if: ${{ env.STEAM_DEPOT_INFO_DIFF != '' }}
-        run: yarn export:install
+      #- if: ${{ env.STEAM_DEPOT_INFO_DIFF != '' }}
+      #  run: yarn export:install
       - if: ${{ env.STEAM_DEPOT_INFO_DIFF != '' }}
         run: df -h
       - if: ${{ env.STEAM_DEPOT_INFO_DIFF != '' }}
